// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@body with a scope and a route with \`.dump()\` 1`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
  "username": "testtest",
}
`;

exports[`@body with a scope and a route with \`.dump()\` 2`] = `
User {
  "email": "test@example.com",
  "password": "asdfsadf",
}
`;

exports[`The hyrest middleware throws an error if no wrapper function was used 1`] = `
Array [
  Array [
    [Error: Route did not return an answer. Make sure the return value is wrapped properly.],
  ],
]
`;

exports[`The hyrest middleware with a context factory and an injected context 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate",
      "authorization": "test",
      "connection": "close",
      "host": "test",
      "user-agent": "node-superagent/3.8.1",
    },
    "test": "test",
    "url": "/test",
  },
]
`;
